--- a/src/common/Header/Header.css
+++ b/src/common/Header/Header.css
@@ -21,3 +21,10 @@
           transform: rotate(360deg);
      }
 }
+
+.upcoming{
+     background-color:#ff9999;
+     padding: 8px;
+     text-align: center;
+     font-size: 1rem;
+}
