--- a/src/common/Header/Header.css
+++ b/src/common/Header/Header.css
@@ -1,30 +1,22 @@
-.header{
+.header {
      background-color: #222;
      height: 36px;
-     padding: 8px, 32px, 8px, 16px;
-}
-
-.movielogo{
+     padding: 8px 32px 8px 16px;
+     display: flex;
+     justify-content: space-between;
+   }
+   
+.logo {
      background-color: #ff7f7f;
      height: 35px;
-     width: 10px;
-     position: absolute;
-     left:30px;
-     animation: rotation 8s infinite linear;
+     animation: rotate-logo infinite 8s linear;
 }
-
-@keyframes rotation {
+   
+@keyframes rotate-logo {
      from {
-          transform: rotate(0deg);
+       transform: rotate(0deg);
      }
      to {
-          transform: rotate(360deg);
+       transform: rotate(360deg);
      }
-}
-
-.upcoming{
-     background-color:#ff9999;
-     padding: 8px;
-     text-align: center;
-     font-size: 1rem;
 }
